MODDICORE-457 Enhance CQL Query Gen for Performance During Identifier Matching